[gd_scene load_steps=15 format=3 uid="uid://dwuvbt5j5i7uw"]

[ext_resource type="Script" path="res://cards/card.gd" id="1_o1hy8"]
[ext_resource type="Resource" uid="uid://bfwl6kt5ciygt" path="res://cards/configs/card_config_air_shoot.tres" id="2_b41ao"]
[ext_resource type="Shader" path="res://utils/shader/burn_dissolver.gdshader" id="3_n0tbj"]
[ext_resource type="Texture2D" uid="uid://cqxc7ixxcxbu" path="res://assets/cards/air/aircardbg.png" id="3_pcsg4"]
[ext_resource type="FontFile" uid="uid://bw8tebfadoyd6" path="res://assets/fonts/Minecraft.ttf" id="5_7myfg"]
[ext_resource type="Texture2D" uid="uid://bvo81bkdj8263" path="res://assets/external_resources/kenney_input-prompts/Keyboard & Mouse/Default/keyboard_q.png" id="5_x5dgr"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_kbouj"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_760fb"]
noise = SubResource("FastNoiseLite_kbouj")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s5f23"]
shader = ExtResource("3_n0tbj")
shader_parameter/percentage = 1.0
shader_parameter/burn_texture = SubResource("NoiseTexture2D_760fb")
shader_parameter/layer_1 = Color(0.2, 0.2, 0.2, 1)
shader_parameter/size_1 = 0.05
shader_parameter/layer_2 = Color(1, 0, 0, 1)
shader_parameter/size_2 = 0.05
shader_parameter/layer_3 = Color(1, 0.5, 0, 1)
shader_parameter/size_3 = 0.05

[sub_resource type="Animation" id="Animation_gj107"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8ghv8"]
resource_name = "destroy"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100)]
}

[sub_resource type="Animation" id="Animation_au0ah"]
resource_name = "down"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -20), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_3ve20"]
resource_name = "up"
length = 0.1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0tbg3"]
_data = {
"RESET": SubResource("Animation_gj107"),
"destroy": SubResource("Animation_8ghv8"),
"down": SubResource("Animation_au0ah"),
"up": SubResource("Animation_3ve20")
}

[node name="Card" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(85, 128)
offset_right = 85.0
offset_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_o1hy8")
card_config = ExtResource("2_b41ao")

[node name="PanelContainer" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 3
material = SubResource("ShaderMaterial_s5f23")
custom_minimum_size = Vector2(85, 128)
layout_mode = 1
offset_right = 85.0
offset_bottom = 128.0
mouse_filter = 1

[node name="CardBackgroundSprite" type="TextureRect" parent="PanelContainer"]
layout_mode = 0
offset_right = 85.0
offset_bottom = 128.0
texture = ExtResource("3_pcsg4")
expand_mode = 1
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -32.0
offset_right = 24.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="CardNameLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_7myfg")
theme_override_font_sizes/normal_font_size = 10
text = "Tiro de Ar"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="UsagesRemainingLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_7myfg")
theme_override_font_sizes/normal_font_size = 10
text = "10"
fit_content = true
autowrap_mode = 0

[node name="KeyboardShortcut" type="TextureRect" parent="PanelContainer"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_top = 117.0
offset_right = 16.0
offset_bottom = 133.0
texture = ExtResource("5_x5dgr")
expand_mode = 3
stretch_mode = 4

[node name="CardIconsContainer" type="HFlowContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -24.0
offset_right = -11.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
last_wrap_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0tbg3")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
